backend: auth fixes, password validation, env-driven CORS